@@ -9,7 +9,12 @@
 
 <h2><a name="ant">Ant</a></h2>
 <h3>Description</h3>
-<p>Runs Ant on a supplied buildfile. This can be used to build subprojects.</p>
+
+<p>Runs Ant on a supplied buildfile. This can be used to build
+subprojects.  <strong>This task must no be used outside of a
+<code>target</code> if it invoces the same build file it is part
+of.</strong></p>
+
 <p>When the <i>antfile</i> attribute is omitted, the file &quot;build.xml&quot;
 in the supplied directory (<i>dir</i> attribute) is used.</p>
 <p>If no target attribute is supplied, the default target of the new project is
