@@ -53,6 +53,11 @@
 <p>
         Calls a given target for all defined sub-builds. This is an extension
         of ant for bulk project execution.
+
+        <strong>This task must no be used outside of a
+        <code>target</code> if it invoces the same build file it is
+        part of.</strong>
+
         </p>
     <table border="0" cellspacing="0" cellpadding="2" width="100%">
       <!-- Subsection heading -->
